src/objects/IT_Circuit_Product__c.object
<CustomObject>
    <fields>
        <fullName>IT_Circuit_Code__c</fullName>
        <externalId>true</externalId>
        <label>Circuit Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Circuit_Type__c</fullName>
        <label>Circuit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Parametral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Circuit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Circuit</label>
        <referenceTo>IT_Circuit__c</referenceTo>
        <relationshipLabel>Circuits Product</relationshipLabel>
        <relationshipName>Circuits_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Circularity__c</fullName>
        <label>Circularity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Opened</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emission</fullName>
                </value>
                <value>
                    <fullName>Final Balance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Management_Type__c</fullName>
        <label>Management Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online light</fullName>
                </value>
                <value>
                    <fullName>Online full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Service_Type__c</fullName>
        <label>Service Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Service__c</fullName>
        <label>Service</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Circuit Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Circuit Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Circuits Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>